--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url(./img/pst2.jpg);
+    background-image: url(./img/silver-dynamic-microphone-on-black-microphone-stand-3783471.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 100%;
